--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "example": "ts-node src/example",
+    "example2": "ts-node src/example2",
     "test": "tape --require ts-node/register \"test/**/*.ts\" | tap-spec"
   },
   "author": "Victor Widell",
